--- a/samples-logs-front-end/src/app/components/filter/status-filter/status-filter.component.html
+++ b/samples-logs-front-end/src/app/components/filter/status-filter/status-filter.component.html
@@ -7,28 +7,28 @@
             <b>{{ shortName(stage) | titlecase }} Status </b>
           </a>
 
-          <a href="#" [routerLink]="[stage, 'success' ]" routerLinkActive="btn-dark" class="btn btn-light btn-sm border">
+          <a href="#" [routerLink]="[stage, 'Success' ]" routerLinkActive="btn-dark" class="btn btn-light btn-sm border">
           Success
           <span class="badge badge-success badge-pill">
             {{ getStatusCount('Success') }}
           </span>
           </a>
 
-          <a href="#" [routerLink]="[stage, 'processing']" class="btn btn-light btn-sm border">
+          <a href="#" [routerLink]="[stage, 'Processing']" class="btn btn-light btn-sm border">
           Processing
           <span class="badge badge-warning badge-pill">
             {{ getStatusCount('Processing') }}
           </span>
           </a>
 
-          <a href="#" [routerLink]="[stage, 'undefined']" class="btn btn-light btn-sm border">
+          <a href="#" [routerLink]="[stage, 'Undefined']" class="btn btn-light btn-sm border">
           Undefined
           <span class="badge badge-info badge-pill">
             {{ getStatusCount('Undefined') }}
           </span>
           </a>
 
-          <a href="#" [routerLink]="[stage, 'failed']" class="btn btn-light btn-sm border">
+          <a href="#" [routerLink]="[stage, 'Failed']" class="btn btn-light btn-sm border">
           Failed
           <span class="badge badge-danger badge-pill">
             {{ getStatusCount('Failed') }}
